@@ -1,16 +1,21 @@
 /*
  * Casciian - Java Text User Interface
  *
- * Written 2013-2025 by Autumn Lamonte
+ * Original work written 2013–2025 by Autumn Lamonte
+ * and dedicated to the public domain via CC0.
  *
- * To the extent possible under law, the author(s) have dedicated all
- * copyright and related and neighboring rights to this software to the
- * public domain worldwide. This software is distributed without any
- * warranty.
+ * Modifications and maintenance:
+ * Copyright 2025 Carlos Rafael Ramirez
  *
- * You should have received a copy of the CC0 Public Domain Dedication along
- * with this software. If not, see
- * <http://creativecommons.org/publicdomain/zero/1.0/>.
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  */
 package casciian.bits;
 
@@ -19,6 +24,9 @@ import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.io.Reader;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
@@ -26,20 +34,279 @@ import java.util.SortedMap;
 import java.util.StringTokenizer;
 import java.util.TreeMap;
 
+import static casciian.backend.SystemProperties.CASCIAN_PROPERTY_PREFIX;
+import static casciian.backend.SystemProperties.CASCIIANRC_ENV_VAR;
+
 /**
  * ColorTheme is a collection of colors keyed by string.  A default theme is
  * also provided that matches the blue-and-white theme used by Turbo Vision.
  */
 public class ColorTheme {
 
-    // ------------------------------------------------------------------------
-    // Variables --------------------------------------------------------------
-    // ------------------------------------------------------------------------
+    // Color key constants
+
+    /** Color key for TWindow border. */
+    public static final String TWINDOW_BORDER = "twindow.border";
+
+    /** Color key for TWindow background. */
+    public static final String TWINDOW_BACKGROUND = "twindow.background";
+
+    /** Color key for TWindow border when inactive. */
+    public static final String TWINDOW_BORDER_INACTIVE = "twindow.border.inactive";
+
+    /** Color key for TWindow background when inactive. */
+    public static final String TWINDOW_BACKGROUND_INACTIVE = "twindow.background.inactive";
+
+    /** Color key for TWindow border in modal mode. */
+    public static final String TWINDOW_BORDER_MODAL = "twindow.border.modal";
+
+    /** Color key for TWindow background in modal mode. */
+    public static final String TWINDOW_BACKGROUND_MODAL = "twindow.background.modal";
+
+    /** Color key for TWindow border when modal and inactive. */
+    public static final String TWINDOW_BORDER_MODAL_INACTIVE = "twindow.border.modal.inactive";
+
+    /** Color key for TWindow background when modal and inactive. */
+    public static final String TWINDOW_BACKGROUND_MODAL_INACTIVE = "twindow.background.modal.inactive";
+
+    /** Color key for TWindow border during window movement in modal mode. */
+    public static final String TWINDOW_BORDER_MODAL_WINDOWMOVE = "twindow.border.modal.windowmove";
+
+    /** Color key for TWindow border during window movement. */
+    public static final String TWINDOW_BORDER_WINDOWMOVE = "twindow.border.windowmove";
+
+    /** Color key for TWindow background during window movement. */
+    public static final String TWINDOW_BACKGROUND_WINDOWMOVE = "twindow.background.windowmove";
+
+    /** Color key for TDesktop background. */
+    public static final String TDESKTOP_BACKGROUND = "tdesktop.background";
+
+    /** Color key for TButton when inactive. */
+    public static final String TBUTTON_INACTIVE = "tbutton.inactive";
+
+    /** Color key for TButton when active. */
+    public static final String TBUTTON_ACTIVE = "tbutton.active";
+
+    /** Color key for TButton when disabled. */
+    public static final String TBUTTON_DISABLED = "tbutton.disabled";
+
+    /** Color key for TButton mnemonic character. */
+    public static final String TBUTTON_MNEMONIC = "tbutton.mnemonic";
+
+    /** Color key for TButton mnemonic character when highlighted. */
+    public static final String TBUTTON_MNEMONIC_HIGHLIGHTED = "tbutton.mnemonic.highlighted";
+
+    /** Color key for TButton mnemonic character pulse effect. */
+    public static final String TBUTTON_MNEMONIC_PULSE = "tbutton.mnemonic.pulse";
+
+    /** Color key for TButton pulse effect. */
+    public static final String TBUTTON_PULSE = "tbutton.pulse";
+
+    /** Color key for TLabel. */
+    public static final String TLABEL = "tlabel";
+
+    /** Color key for TLabel mnemonic character. */
+    public static final String TLABEL_MNEMONIC = "tlabel.mnemonic";
+
+    /** Color key for TText. */
+    public static final String TTEXT = "ttext";
+
+    /** Color key for TField when inactive. */
+    public static final String TFIELD_INACTIVE = "tfield.inactive";
+
+    /** Color key for TField when active. */
+    public static final String TFIELD_ACTIVE = "tfield.active";
+
+    /** Color key for TField pulse effect. */
+    public static final String TFIELD_PULSE = "tfield.pulse";
+
+    /** Color key for TCheckBox when inactive. */
+    public static final String TCHECKBOX_INACTIVE = "tcheckbox.inactive";
+
+    /** Color key for TCheckBox when active. */
+    public static final String TCHECKBOX_ACTIVE = "tcheckbox.active";
+
+    /** Color key for TCheckBox mnemonic character. */
+    public static final String TCHECKBOX_MNEMONIC = "tcheckbox.mnemonic";
+
+    /** Color key for TCheckBox mnemonic character when highlighted. */
+    public static final String TCHECKBOX_MNEMONIC_HIGHLIGHTED = "tcheckbox.mnemonic.highlighted";
+
+    /** Color key for TCheckBox pulse effect. */
+    public static final String TCHECKBOX_PULSE = "tcheckbox.pulse";
+
+    /** Color key for TComboBox when inactive. */
+    public static final String TCOMBOBOX_INACTIVE = "tcombobox.inactive";
+
+    /** Color key for TComboBox when active. */
+    public static final String TCOMBOBOX_ACTIVE = "tcombobox.active";
+
+    /** Color key for TSpinner when inactive. */
+    public static final String TSPINNER_INACTIVE = "tspinner.inactive";
+
+    /** Color key for TSpinner when active. */
+    public static final String TSPINNER_ACTIVE = "tspinner.active";
+
+    /** Color key for TCalendar background. */
+    public static final String TCALENDAR_BACKGROUND = "tcalendar.background";
+
+    /** Color key for TCalendar day. */
+    public static final String TCALENDAR_DAY = "tcalendar.day";
+
+    /** Color key for TCalendar selected day. */
+    public static final String TCALENDAR_DAY_SELECTED = "tcalendar.day.selected";
+
+    /** Color key for TCalendar navigation arrow. */
+    public static final String TCALENDAR_ARROW = "tcalendar.arrow";
+
+    /** Color key for TCalendar title. */
+    public static final String TCALENDAR_TITLE = "tcalendar.title";
+
+    /** Color key for TPanel border. */
+    public static final String TPANEL_BORDER = "tpanel.border";
+
+    /** Color key for TRadioButton when inactive. */
+    public static final String TRADIOBUTTON_INACTIVE = "tradiobutton.inactive";
+
+    /** Color key for TRadioButton when active. */
+    public static final String TRADIOBUTTON_ACTIVE = "tradiobutton.active";
+
+    /** Color key for TRadioButton mnemonic character. */
+    public static final String TRADIOBUTTON_MNEMONIC = "tradiobutton.mnemonic";
+
+    /** Color key for TRadioButton mnemonic character when highlighted. */
+    public static final String TRADIOBUTTON_MNEMONIC_HIGHLIGHTED = "tradiobutton.mnemonic.highlighted";
+
+    /** Color key for TRadioButton pulse effect. */
+    public static final String TRADIOBUTTON_PULSE = "tradiobutton.pulse";
+
+    /** Color key for TRadioGroup when inactive. */
+    public static final String TRADIOGROUP_INACTIVE = "tradiogroup.inactive";
+
+    /** Color key for TRadioGroup when active. */
+    public static final String TRADIOGROUP_ACTIVE = "tradiogroup.active";
+
+    /** Color key for TMenu. */
+    public static final String TMENU = "tmenu";
+
+    /** Color key for TMenu when highlighted. */
+    public static final String TMENU_HIGHLIGHTED = "tmenu.highlighted";
+
+    /** Color key for TMenu mnemonic character. */
+    public static final String TMENU_MNEMONIC = "tmenu.mnemonic";
+
+    /** Color key for TMenu mnemonic character when highlighted. */
+    public static final String TMENU_MNEMONIC_HIGHLIGHTED = "tmenu.mnemonic.highlighted";
+
+    /** Color key for TMenu when disabled. */
+    public static final String TMENU_DISABLED = "tmenu.disabled";
+
+    /** Color key for TProgressBar completed portion. */
+    public static final String TPROGRESSBAR_COMPLETE = "tprogressbar.complete";
+
+    /** Color key for TProgressBar incomplete portion. */
+    public static final String TPROGRESSBAR_INCOMPLETE = "tprogressbar.incomplete";
+
+    /** Color key for THScroller and TVScroller bar. */
+    public static final String TSCROLLER_BAR = "tscroller.bar";
+
+    /** Color key for THScroller and TVScroller arrows. */
+    public static final String TSCROLLER_ARROWS = "tscroller.arrows";
+
+    /** Color key for TTreeView. */
+    public static final String TTREEVIEW = "ttreeview";
+
+    /** Color key for TTreeView expand button. */
+    public static final String TTREEVIEW_EXPANDBUTTON = "ttreeview.expandbutton";
+
+    /** Color key for TTreeView selected item. */
+    public static final String TTREEVIEW_SELECTED = "ttreeview.selected";
+
+    /** Color key for TTreeView unreadable item. */
+    public static final String TTREEVIEW_UNREADABLE = "ttreeview.unreadable";
+
+    /** Color key for TTreeView when inactive. */
+    public static final String TTREEVIEW_INACTIVE = "ttreeview.inactive";
+
+    /** Color key for TTreeView selected item when inactive. */
+    public static final String TTREEVIEW_SELECTED_INACTIVE = "ttreeview.selected.inactive";
+
+    /** Color key for TList. */
+    public static final String TLIST = "tlist";
+
+    /** Color key for TList selected item. */
+    public static final String TLIST_SELECTED = "tlist.selected";
+
+    /** Color key for TList unreadable item. */
+    public static final String TLIST_UNREADABLE = "tlist.unreadable";
+
+    /** Color key for TList when inactive. */
+    public static final String TLIST_INACTIVE = "tlist.inactive";
+
+    /** Color key for TList selected item when inactive. */
+    public static final String TLIST_SELECTED_INACTIVE = "tlist.selected.inactive";
+
+    /** Color key for TStatusBar text. */
+    public static final String TSTATUSBAR_TEXT = "tstatusbar.text";
+
+    /** Color key for TStatusBar button. */
+    public static final String TSTATUSBAR_BUTTON = "tstatusbar.button";
+
+    /** Color key for TStatusBar selected item. */
+    public static final String TSTATUSBAR_SELECTED = "tstatusbar.selected";
+
+    /** Color key for TEditor. */
+    public static final String TEDITOR = "teditor";
+
+    /** Color key for TEditor selected text. */
+    public static final String TEDITOR_SELECTED = "teditor.selected";
+
+    /** Color key for TEditor margin. */
+    public static final String TEDITOR_MARGIN = "teditor.margin";
+
+    /** Color key for TTable when inactive. */
+    public static final String TTABLE_INACTIVE = "ttable.inactive";
+
+    /** Color key for TTable when active. */
+    public static final String TTABLE_ACTIVE = "ttable.active";
+
+    /** Color key for TTable selected item. */
+    public static final String TTABLE_SELECTED = "ttable.selected";
+
+    /** Color key for TTable label. */
+    public static final String TTABLE_LABEL = "ttable.label";
+
+    /** Color key for TTable selected label. */
+    public static final String TTABLE_LABEL_SELECTED = "ttable.label.selected";
+
+    /** Color key for TTable border. */
+    public static final String TTABLE_BORDER = "ttable.border";
+
+    /** Color key for TSplitPane. */
+    public static final String TSPLITPANE = "tsplitpane";
+
+    /** Color key for THelpWindow during window movement. */
+    public static final String THELPWINDOW_WINDOWMOVE = "thelpwindow.windowmove";
+
+    /** Color key for THelpWindow border. */
+    public static final String THELPWINDOW_BORDER = "thelpwindow.border";
+
+    /** Color key for THelpWindow background. */
+    public static final String THELPWINDOW_BACKGROUND = "thelpwindow.background";
+
+    /** Color key for THelpWindow text. */
+    public static final String THELPWINDOW_TEXT = "thelpwindow.text";
+
+    /** Color key for THelpWindow link. */
+    public static final String THELPWINDOW_LINK = "thelpwindow.link";
+
+    /** Color key for THelpWindow active link. */
+    public static final String THELPWINDOW_LINK_ACTIVE = "thelpwindow.link.active";
 
     /**
      * The current theme colors.
      */
-    private SortedMap<String, CellAttributes> colors;
+    private final SortedMap<String, CellAttributes> colors;
 
     // ------------------------------------------------------------------------
     // Constructors -----------------------------------------------------------
@@ -50,8 +317,36 @@ public class ColorTheme {
      */
     @SuppressWarnings("this-escape")
     public ColorTheme() {
-        colors = new TreeMap<String, CellAttributes>();
+        colors = new TreeMap<>();
         setDefaultTheme();
+        loadThemeFromCasciianRcFile();
+    }
+
+
+    /**
+     * Loads properties from the CASCIIANRC file if defined.
+     * Properties from the file are only set if they are not already defined
+     * via -D JVM options (i.e., -D options take priority).
+     * <p>
+     * This method is called during class initialization and can also be called
+     * after reset() for testing purposes.
+     */
+    private void loadThemeFromCasciianRcFile() {
+        String rcFilePath = System.getenv(CASCIIANRC_ENV_VAR);
+        if (rcFilePath == null || rcFilePath.isEmpty()) {
+            return;
+        }
+
+        try {
+            Path path = Paths.get(rcFilePath);
+            if (!Files.exists(path) || !Files.isRegularFile(path)) {
+                return;
+            }
+
+            load(rcFilePath);
+        } catch (Exception e) {
+            // Silently ignore any errors (including invalid paths) - similar to how dialog handles DIALOGRC
+        }
     }
 
     // ------------------------------------------------------------------------
@@ -65,8 +360,7 @@ public class ColorTheme {
      * @return color associated with name, e.g. bold yellow on blue
      */
     public CellAttributes getColor(final String name) {
-        CellAttributes attr = colors.get(name);
-        return attr;
+        return colors.get(name);
     }
 
     /**
@@ -76,7 +370,7 @@ public class ColorTheme {
      */
     public List<String> getColorNames() {
         Set<String> keys = colors.keySet();
-        List<String> names = new ArrayList<String>(keys.size());
+        List<String> names = new ArrayList<>(keys.size());
         names.addAll(keys);
         return names;
     }
@@ -84,9 +378,9 @@ public class ColorTheme {
     /**
      * Set the color for a named theme color.
      *
-     * @param name theme color name, e.g. "twindow.border"
+     * @param name  theme color name, e.g. "twindow.border"
      * @param color the new color to associate with name, e.g. bold yellow on
-     * blue
+     *              blue
      */
     public void setColor(final String name, final CellAttributes color) {
         colors.put(name, color);
@@ -99,12 +393,12 @@ public class ColorTheme {
      * @throws IOException if the I/O fails
      */
     public void save(final String filename) throws IOException {
-        FileWriter file = new FileWriter(filename);
-        for (String key: colors.keySet()) {
-            CellAttributes color = getColor(key);
-            file.write(String.format("%s = %s\n", key, color));
+        try (FileWriter file = new FileWriter(filename)) {
+            for (String key : colors.keySet()) {
+                CellAttributes color = getColor(key);
+                file.write("%s = %s%n".formatted(key, color));
+            }
         }
-        file.close();
     }
 
     /**
@@ -121,7 +415,7 @@ public class ColorTheme {
      * Set a color based on a text string.  Color text string is of the form:
      * <code>[ bold ] [ blink ] { foreground on background }</code>
      *
-     * @param key the color key string
+     * @param key  the color key string
      * @param text the text string
      */
     public void setColorFromString(final String key, final String text) {
@@ -134,42 +428,8 @@ public class ColorTheme {
         StringTokenizer tokenizer = new StringTokenizer(text);
         token = tokenizer.nextToken();
 
-        if (token.toLowerCase().equals("rgb:")) {
-            // Foreground
-            int foreColorRGB = -1;
-            try {
-                String rgbText = tokenizer.nextToken();
-                while (rgbText.startsWith("#")) {
-                    rgbText = rgbText.substring(1);
-                }
-                foreColorRGB = Integer.parseInt(rgbText, 16);
-            } catch (NumberFormatException e) {
-                // Default to white on black
-                foreColorRGB = 0xFFFFFF;
-            }
-
-            // "on"
-            if (!tokenizer.nextToken().toLowerCase().equals("on")) {
-                // Invalid line.
-                return;
-            }
-
-            // Background
-            int backColorRGB = -1;
-            try {
-                String rgbText = tokenizer.nextToken();
-                while (rgbText.startsWith("#")) {
-                    rgbText = rgbText.substring(1);
-                }
-                backColorRGB = Integer.parseInt(rgbText, 16);
-            } catch (NumberFormatException e) {
-                backColorRGB = 0;
-            }
-
-            CellAttributes color = new CellAttributes();
-            color.setForeColorRGB(foreColorRGB);
-            color.setBackColorRGB(backColorRGB);
-            colors.put(key, color);
+        if (token.equalsIgnoreCase("rgb:")) {
+            setRgbColorFromString(key, tokenizer);
             return;
         }
 
@@ -190,7 +450,7 @@ public class ColorTheme {
         // What's left is "blah on blah"
         foreColor = token.toLowerCase();
 
-        if (!tokenizer.nextToken().toLowerCase().equals("on")) {
+        if (!tokenizer.nextToken().equalsIgnoreCase("on")) {
             // Invalid line.
             return;
         }
@@ -208,6 +468,44 @@ public class ColorTheme {
         colors.put(key, color);
     }
 
+    private void setRgbColorFromString(String key, StringTokenizer tokenizer) {
+        // Foreground
+        int foreColorRGB;
+        try {
+            String rgbText = tokenizer.nextToken();
+            while (rgbText.startsWith("#")) {
+                rgbText = rgbText.substring(1);
+            }
+            foreColorRGB = Integer.parseInt(rgbText, 16);
+        } catch (NumberFormatException e) {
+            // Default to white on black
+            foreColorRGB = 0xFFFFFF;
+        }
+
+        // "on"
+        if (!tokenizer.nextToken().equalsIgnoreCase("on")) {
+            // Invalid line.
+            return;
+        }
+
+        // Background
+        int backColorRGB;
+        try {
+            String rgbText = tokenizer.nextToken();
+            while (rgbText.startsWith("#")) {
+                rgbText = rgbText.substring(1);
+            }
+            backColorRGB = Integer.parseInt(rgbText, 16);
+        } catch (NumberFormatException e) {
+            backColorRGB = 0;
+        }
+
+        CellAttributes color = new CellAttributes();
+        color.setForeColorRGB(foreColorRGB);
+        color.setBackColorRGB(backColorRGB);
+        colors.put(key, color);
+    }
+
     /**
      * Read color theme mappings from a Reader.  The reader is closed at the
      * end.
@@ -216,25 +514,27 @@ public class ColorTheme {
      * @throws IOException if the I/O fails
      */
     public void load(final Reader reader) throws IOException {
-        BufferedReader bufferedReader = new BufferedReader(reader);
-        String line = bufferedReader.readLine();
-        for (; line != null; line = bufferedReader.readLine()) {
-            // Look for lines that resemble:
-            //     "key = blah on blah"
-            //     "key = bold blah on blah"
-            //     "key = blink bold blah on blah"
-            //     "key = bold blink blah on blah"
-            //     "key = blink blah on blah"
-            if (line.indexOf('=') == -1) {
-                // Invalid line.
-                continue;
+        try (BufferedReader bufferedReader = new BufferedReader(reader)) {
+            String line = bufferedReader.readLine();
+            for (; line != null; line = bufferedReader.readLine()) {
+                // Look for lines that resemble:
+                //     "key = blah on blah"
+                //     "key = bold blah on blah"
+                //     "key = blink bold blah on blah"
+                //     "key = bold blink blah on blah"
+                //     "key = blink blah on blah"
+                if (line.indexOf('=') == -1) {
+                    // Invalid line.
+                    continue;
+                }
+                String key = line.substring(0, line.indexOf('=')).trim();
+                String text = line.substring(line.indexOf('=') + 1);
+
+                if (!key.startsWith(CASCIAN_PROPERTY_PREFIX)) {
+                    setColorFromString(key, text);
+                }
             }
-            String key = line.substring(0, line.indexOf('=')).trim();
-            String text = line.substring(line.indexOf('=') + 1);
-            setColorFromString(key, text);
         }
-        // All done.
-        bufferedReader.close();
     }
 
     /**
@@ -248,557 +548,515 @@ public class ColorTheme {
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("twindow.border", color);
+        colors.put(TWINDOW_BORDER, color);
 
         // TWindow background
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("twindow.background", color);
+        colors.put(TWINDOW_BACKGROUND, color);
 
         // TWindow border - inactive
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("twindow.border.inactive", color);
+        colors.put(TWINDOW_BORDER_INACTIVE, color);
 
         // TWindow background - inactive
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("twindow.background.inactive", color);
+        colors.put(TWINDOW_BACKGROUND_INACTIVE, color);
 
         // TWindow border - modal
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.WHITE);
         color.setBold(true);
-        colors.put("twindow.border.modal", color);
+        colors.put(TWINDOW_BORDER_MODAL, color);
 
         // TWindow background - modal
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("twindow.background.modal", color);
+        colors.put(TWINDOW_BACKGROUND_MODAL, color);
 
         // TWindow border - modal + inactive
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(true);
-        colors.put("twindow.border.modal.inactive", color);
+        colors.put(TWINDOW_BORDER_MODAL_INACTIVE, color);
 
         // TWindow background - modal + inactive
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("twindow.background.modal.inactive", color);
+        colors.put(TWINDOW_BACKGROUND_MODAL_INACTIVE, color);
 
         // TWindow border - during window movement - modal
         color = new CellAttributes();
         color.setForeColor(Color.GREEN);
         color.setBackColor(Color.WHITE);
         color.setBold(true);
-        colors.put("twindow.border.modal.windowmove", color);
+        colors.put(TWINDOW_BORDER_MODAL_WINDOWMOVE, color);
 
         // TWindow border - during window movement
         color = new CellAttributes();
         color.setForeColor(Color.GREEN);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("twindow.border.windowmove", color);
+        colors.put(TWINDOW_BORDER_WINDOWMOVE, color);
 
         // TWindow background - during window movement
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("twindow.background.windowmove", color);
+        colors.put(TWINDOW_BACKGROUND_WINDOWMOVE, color);
 
         // TDesktop background
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tdesktop.background", color);
+        colors.put(TDESKTOP_BACKGROUND, color);
 
         // TButton text
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.GREEN);
         color.setBold(false);
-        colors.put("tbutton.inactive", color);
+        colors.put(TBUTTON_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.CYAN);
         color.setBackColor(Color.GREEN);
         color.setBold(true);
-        colors.put("tbutton.active", color);
+        colors.put(TBUTTON_ACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(true);
-        colors.put("tbutton.disabled", color);
+        colors.put(TBUTTON_DISABLED, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.GREEN);
         color.setBold(true);
-        colors.put("tbutton.mnemonic", color);
+        colors.put(TBUTTON_MNEMONIC, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.GREEN);
         color.setBold(true);
-        colors.put("tbutton.mnemonic.highlighted", color);
+        colors.put(TBUTTON_MNEMONIC_HIGHLIGHTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tbutton.mnemonic.pulse", color);
+        colors.put(TBUTTON_MNEMONIC_PULSE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tbutton.pulse", color);
+        colors.put(TBUTTON_PULSE, color);
 
         // TLabel text
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("tlabel", color);
+        colors.put(TLABEL, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("tlabel.mnemonic", color);
+        colors.put(TLABEL_MNEMONIC, color);
 
         // TText text
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("ttext", color);
+        colors.put(TTEXT, color);
 
         // TField text
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tfield.inactive", color);
+        colors.put(TFIELD_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tfield.active", color);
+        colors.put(TFIELD_ACTIVE, color);
         color = new CellAttributes();
         // Just a small bit of amber.
         color.setForeColorRGB(0x8A610D);
-        colors.put("tfield.pulse", color);
+        colors.put(TFIELD_PULSE, color);
 
         // TCheckBox
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tcheckbox.inactive", color);
+        colors.put(TCHECKBOX_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tcheckbox.active", color);
+        colors.put(TCHECKBOX_ACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("tcheckbox.mnemonic", color);
+        colors.put(TCHECKBOX_MNEMONIC, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBackColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tcheckbox.mnemonic.highlighted", color);
+        colors.put(TCHECKBOX_MNEMONIC_HIGHLIGHTED, color);
         color = new CellAttributes();
         // Just a small bit of amber.
         color.setForeColorRGB(0x8A610D);
-        colors.put("tcheckbox.pulse", color);
+        colors.put(TCHECKBOX_PULSE, color);
 
         // TComboBox
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tcombobox.inactive", color);
+        colors.put(TCOMBOBOX_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tcombobox.active", color);
+        colors.put(TCOMBOBOX_ACTIVE, color);
 
         // TSpinner
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tspinner.inactive", color);
+        colors.put(TSPINNER_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tspinner.active", color);
+        colors.put(TSPINNER_ACTIVE, color);
 
         // TCalendar
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tcalendar.background", color);
+        colors.put(TCALENDAR_BACKGROUND, color);
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tcalendar.day", color);
+        colors.put(TCALENDAR_DAY, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tcalendar.day.selected", color);
+        colors.put(TCALENDAR_DAY_SELECTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tcalendar.arrow", color);
+        colors.put(TCALENDAR_ARROW, color);
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("tcalendar.title", color);
+        colors.put(TCALENDAR_TITLE, color);
 
         // TPanel border
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
-        colors.put("tpanel.border", color);
+        colors.put(TPANEL_BORDER, color);
 
         // TRadioButton
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tradiobutton.inactive", color);
+        colors.put(TRADIOBUTTON_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tradiobutton.active", color);
+        colors.put(TRADIOBUTTON_ACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("tradiobutton.mnemonic", color);
+        colors.put(TRADIOBUTTON_MNEMONIC, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBackColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tradiobutton.mnemonic.highlighted", color);
+        colors.put(TRADIOBUTTON_MNEMONIC_HIGHLIGHTED, color);
         color = new CellAttributes();
         // Just a small bit of amber.
         color.setForeColorRGB(0x8A610D);
-        colors.put("tradiobutton.pulse", color);
+        colors.put(TRADIOBUTTON_PULSE, color);
 
         // TRadioGroup
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tradiogroup.inactive", color);
+        colors.put(TRADIOGROUP_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("tradiogroup.active", color);
+        colors.put(TRADIOGROUP_ACTIVE, color);
 
         // TMenu
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tmenu", color);
+        colors.put(TMENU, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.GREEN);
         color.setBold(false);
-        colors.put("tmenu.highlighted", color);
+        colors.put(TMENU_HIGHLIGHTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tmenu.mnemonic", color);
+        colors.put(TMENU_MNEMONIC, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBackColor(Color.GREEN);
         color.setBold(false);
-        colors.put("tmenu.mnemonic.highlighted", color);
+        colors.put(TMENU_MNEMONIC_HIGHLIGHTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(true);
-        colors.put("tmenu.disabled", color);
+        colors.put(TMENU_DISABLED, color);
 
         // TProgressBar
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("tprogressbar.complete", color);
+        colors.put(TPROGRESSBAR_COMPLETE, color);
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tprogressbar.incomplete", color);
+        colors.put(TPROGRESSBAR_INCOMPLETE, color);
 
         // THScroller / TVScroller
         color = new CellAttributes();
         color.setForeColor(Color.CYAN);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tscroller.bar", color);
+        colors.put(TSCROLLER_BAR, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tscroller.arrows", color);
+        colors.put(TSCROLLER_ARROWS, color);
 
         // TTreeView
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("ttreeview", color);
+        colors.put(TTREEVIEW, color);
         color = new CellAttributes();
         color.setForeColor(Color.GREEN);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("ttreeview.expandbutton", color);
+        colors.put(TTREEVIEW_EXPANDBUTTON, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("ttreeview.selected", color);
+        colors.put(TTREEVIEW_SELECTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("ttreeview.unreadable", color);
+        colors.put(TTREEVIEW_UNREADABLE, color);
         color = new CellAttributes();
-        // color.setForeColor(Color.BLACK);
-        // color.setBackColor(Color.BLUE);
-        // color.setBold(true);
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("ttreeview.inactive", color);
+        colors.put(TTREEVIEW_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("ttreeview.selected.inactive", color);
+        colors.put(TTREEVIEW_SELECTED_INACTIVE, color);
 
         // TList
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tlist", color);
+        colors.put(TLIST, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tlist.selected", color);
+        colors.put(TLIST_SELECTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tlist.unreadable", color);
+        colors.put(TLIST_UNREADABLE, color);
         color = new CellAttributes();
-        // color.setForeColor(Color.BLACK);
-        // color.setBackColor(Color.BLUE);
-        // color.setBold(true);
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tlist.inactive", color);
+        colors.put(TLIST_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tlist.selected.inactive", color);
+        colors.put(TLIST_SELECTED_INACTIVE, color);
 
         // TStatusBar
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tstatusbar.text", color);
+        colors.put(TSTATUSBAR_TEXT, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tstatusbar.button", color);
+        colors.put(TSTATUSBAR_BUTTON, color);
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tstatusbar.selected", color);
+        colors.put(TSTATUSBAR_SELECTED, color);
 
         // TEditor
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("teditor", color);
+        colors.put(TEDITOR, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("teditor.selected", color);
+        colors.put(TEDITOR_SELECTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("teditor.margin", color);
+        colors.put(TEDITOR_MARGIN, color);
 
         // TTable
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("ttable.inactive", color);
+        colors.put(TTABLE_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("ttable.active", color);
+        colors.put(TTABLE_ACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("ttable.selected", color);
+        colors.put(TTABLE_SELECTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("ttable.label", color);
+        colors.put(TTABLE_LABEL, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("ttable.label.selected", color);
+        colors.put(TTABLE_LABEL_SELECTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("ttable.border", color);
+        colors.put(TTABLE_BORDER, color);
 
         // TSplitPane
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tsplitpane", color);
+        colors.put(TSPLITPANE, color);
 
         // THelpWindow border - during window movement
         color = new CellAttributes();
         color.setForeColor(Color.GREEN);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("thelpwindow.windowmove", color);
+        colors.put(THELPWINDOW_WINDOWMOVE, color);
 
         // THelpWindow border
         color = new CellAttributes();
         color.setForeColor(Color.GREEN);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("thelpwindow.border", color);
+        colors.put(THELPWINDOW_BORDER, color);
 
         // THelpWindow background
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("thelpwindow.background", color);
+        colors.put(THELPWINDOW_BACKGROUND, color);
 
         // THelpWindow text
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("thelpwindow.text", color);
+        colors.put(THELPWINDOW_TEXT, color);
 
         // THelpWindow link
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("thelpwindow.link", color);
+        colors.put(THELPWINDOW_LINK, color);
 
         // THelpWindow link - active
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("thelpwindow.link.active", color);
+        colors.put(THELPWINDOW_LINK_ACTIVE, color);
     }
 
     /**
      * Set the theme to femme.  I love pink.  You can too!  💗
      */
+    @SuppressWarnings("DuplicatedCode")
     public void setFemme() {
         setDefaultTheme();
         final int pink = 0xf7a8b8;
         final int blue = 0x55cdfc;
         final int pink2 = 0xd77888;
 
-        for (String key: colors.keySet()) {
-            CellAttributes color = colors.get(key);
-
-            Color fg = color.getForeColor();
-            Color bg = color.getBackColor();
-            boolean bold = color.isBold();
-            if (bg.equals(Color.WHITE) && fg.equals(Color.BLACK)) {
-                color.setForeColor(Color.MAGENTA);
-                color.setBackColorRGB(pink);
-            } else if (bg.equals(Color.WHITE) && fg.equals(Color.WHITE)) {
-                color.setForeColor(Color.MAGENTA);
-                color.setBackColorRGB(pink);
-                color.setBold(true);
-            } else if (bg.equals(Color.WHITE) && fg.equals(Color.WHITE)) {
-                color.setForeColorRGB(blue);
-                color.setBackColorRGB(pink);
-                color.setBold(true);
-            } else if (bg.equals(Color.WHITE) && fg.equals(Color.GREEN)) {
-                color.setForeColor(Color.BLUE);
-                color.setBackColor(Color.BLACK);
-                color.setBold(true);
-            } else if (bg.equals(Color.WHITE) && fg.equals(Color.RED)) {
-                color.setForeColorRGB(blue);
-                color.setBackColorRGB(pink);
-                color.setBold(true);
-            } else if (bg.equals(Color.BLUE) && fg.equals(Color.CYAN)) {
-                color.setForeColor(Color.RED);
-                color.setBackColor(Color.MAGENTA);
-                color.setBold(true);
-            } else if (fg.equals(Color.BLUE) && bg.equals(Color.CYAN)) {
-                color.setForeColor(Color.MAGENTA);
-                color.setBackColor(Color.RED);
-                color.setBold(true);
-            } else if (bg.equals(Color.BLUE)) {
-                color.setBackColor(Color.BLACK);
-            } else if (bg.equals(Color.GREEN)) {
-                color.setBackColor(Color.CYAN);
-            } else if (fg.equals(Color.WHITE) && bold) {
-                color.setForeColor(Color.RED);
-            }
+        for (var entry : colors.entrySet()) {
+            var key = entry.getKey();
+            var color = getFemmeCellAttributes(entry.getValue(), pink, blue);
 
             colors.put(key, color);
         }
@@ -808,34 +1066,34 @@ public class ColorTheme {
         color.setForeColor(Color.MAGENTA);
         color.setBackColorRGB(pink2);
         color.setBold(false);
-        colors.put("twindow.background", color);
-        colors.put("twindow.background.inactive", color);
-        colors.put("twindow.background.modal", color);
-        colors.put("twindow.background.modal.inactive", color);
-        colors.put("twindow.background.windowmove", color);
+        colors.put(TWINDOW_BACKGROUND, color);
+        colors.put(TWINDOW_BACKGROUND_INACTIVE, color);
+        colors.put(TWINDOW_BACKGROUND_MODAL, color);
+        colors.put(TWINDOW_BACKGROUND_MODAL_INACTIVE, color);
+        colors.put(TWINDOW_BACKGROUND_WINDOWMOVE, color);
 
         color = new CellAttributes();
         color.setForeColor(Color.MAGENTA);
         color.setBold(true);
-        colors.put("twindow.border", color);
-        colors.put("twindow.border.inactive", color);
-        colors.put("twindow.border.modal", color);
-        colors.put("twindow.border.modal.inactive", color);
+        colors.put(TWINDOW_BORDER, color);
+        colors.put(TWINDOW_BORDER_INACTIVE, color);
+        colors.put(TWINDOW_BORDER_MODAL, color);
+        colors.put(TWINDOW_BORDER_MODAL_INACTIVE, color);
 
         color = new CellAttributes();
         color.setForeColorRGB(blue);
-        colors.put("twindow.border.windowmove", color);
-        colors.put("twindow.border.modal.windowmove", color);
+        colors.put(TWINDOW_BORDER_WINDOWMOVE, color);
+        colors.put(TWINDOW_BORDER_MODAL_WINDOWMOVE, color);
 
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBold(true);
         color.setBackColorRGB(pink);
-        colors.put("tbutton.active", color);
+        colors.put(TBUTTON_ACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColorRGB(pink);
-        colors.put("tbutton.inactive", color);
+        colors.put(TBUTTON_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBold(true);
@@ -843,52 +1101,90 @@ public class ColorTheme {
         color.setForeColorRGB(blue);
         color.setBold(true);
         color.setBackColorRGB(pink);
-        colors.put("tbutton.mnemonic.highlighted", color);
+        colors.put(TBUTTON_MNEMONIC_HIGHLIGHTED, color);
         color = new CellAttributes();
         color.setForeColorRGB(blue);
         color.setBold(true);
         color.setBackColorRGB(pink);
-        colors.put("tbutton.mnemonic", color);
+        colors.put(TBUTTON_MNEMONIC, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
-        colors.put("tbutton.pulse", color);
+        colors.put(TBUTTON_PULSE, color);
         color = new CellAttributes();
         color.setForeColorRGB(blue);
         color.setBold(true);
-        colors.put("tbutton.mnemonic.pulse", color);
+        colors.put(TBUTTON_MNEMONIC_PULSE, color);
 
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColorRGB(pink2);
         color.setBold(true);
-        colors.put("tprogressbar.complete", color);
+        colors.put(TPROGRESSBAR_COMPLETE, color);
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColorRGB(pink2);
         color.setBold(false);
-        colors.put("tprogressbar.incomplete", color);
+        colors.put(TPROGRESSBAR_INCOMPLETE, color);
 
         color = new CellAttributes();
         color.setForeColor(Color.MAGENTA);
         color.setBackColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tpanel.border", color);
+        colors.put(TPANEL_BORDER, color);
 
         color = new CellAttributes();
         color.setForeColor(Color.MAGENTA);
         color.setBackColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tradiogroup.active", color);
+        colors.put(TRADIOGROUP_ACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.MAGENTA);
         color.setBackColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tradiobutton.active", color);
+        colors.put(TRADIOBUTTON_ACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.MAGENTA);
         color.setBackColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tcheckbox.active", color);
+        colors.put(TCHECKBOX_ACTIVE, color);
+    }
+
+    @SuppressWarnings("SameParameterValue")
+    private static CellAttributes getFemmeCellAttributes(CellAttributes color, int pink, int blue) {
+        Color fg = color.getForeColor();
+        Color bg = color.getBackColor();
+        boolean bold = color.isBold();
+        if (bg.equals(Color.WHITE) && fg.equals(Color.BLACK)) {
+            color.setForeColor(Color.MAGENTA);
+            color.setBackColorRGB(pink);
+        } else if (bg.equals(Color.WHITE) && fg.equals(Color.WHITE)) {
+            color.setForeColor(Color.MAGENTA);
+            color.setBackColorRGB(pink);
+            color.setBold(true);
+        } else if (bg.equals(Color.WHITE) && fg.equals(Color.GREEN)) {
+            color.setForeColor(Color.BLUE);
+            color.setBackColor(Color.BLACK);
+            color.setBold(true);
+        } else if (bg.equals(Color.WHITE) && fg.equals(Color.RED)) {
+            color.setForeColorRGB(blue);
+            color.setBackColorRGB(pink);
+            color.setBold(true);
+        } else if (bg.equals(Color.BLUE) && fg.equals(Color.CYAN)) {
+            color.setForeColor(Color.RED);
+            color.setBackColor(Color.MAGENTA);
+            color.setBold(true);
+        } else if (fg.equals(Color.BLUE) && bg.equals(Color.CYAN)) {
+            color.setForeColor(Color.MAGENTA);
+            color.setBackColor(Color.RED);
+            color.setBold(true);
+        } else if (bg.equals(Color.BLUE)) {
+            color.setBackColor(Color.BLACK);
+        } else if (bg.equals(Color.GREEN)) {
+            color.setBackColor(Color.CYAN);
+        } else if (fg.equals(Color.WHITE) && bold) {
+            color.setForeColor(Color.RED);
+        }
+        return color;
     }
 
     /**
@@ -902,505 +1198,499 @@ public class ColorTheme {
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("twindow.border", color);
+        colors.put(TWINDOW_BORDER, color);
 
         // TWindow background
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColor(Color.CYAN);
-        colors.put("twindow.background", color);
+        colors.put(TWINDOW_BACKGROUND, color);
 
         // TWindow border - inactive
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("twindow.border.inactive", color);
+        colors.put(TWINDOW_BORDER_INACTIVE, color);
 
         // TWindow background - inactive
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColor(Color.CYAN);
-        colors.put("twindow.background.inactive", color);
+        colors.put(TWINDOW_BACKGROUND_INACTIVE, color);
 
         // TWindow border - modal
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.WHITE);
         color.setBold(true);
-        colors.put("twindow.border.modal", color);
+        colors.put(TWINDOW_BORDER_MODAL, color);
 
         // TWindow background - modal
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("twindow.background.modal", color);
+        colors.put(TWINDOW_BACKGROUND_MODAL, color);
 
         // TWindow border - modal + inactive
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(true);
-        colors.put("twindow.border.modal.inactive", color);
+        colors.put(TWINDOW_BORDER_MODAL_INACTIVE, color);
 
         // TWindow background - modal + inactive
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("twindow.background.modal.inactive", color);
+        colors.put(TWINDOW_BACKGROUND_MODAL_INACTIVE, color);
 
         // TWindow border - during window movement - modal
         color = new CellAttributes();
         color.setForeColor(Color.GREEN);
         color.setBackColor(Color.WHITE);
         color.setBold(true);
-        colors.put("twindow.border.modal.windowmove", color);
+        colors.put(TWINDOW_BORDER_MODAL_WINDOWMOVE, color);
 
         // TWindow border - during window movement
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("twindow.border.windowmove", color);
+        colors.put(TWINDOW_BORDER_WINDOWMOVE, color);
 
         // TWindow background - during window movement
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("twindow.background.windowmove", color);
+        colors.put(TWINDOW_BACKGROUND_WINDOWMOVE, color);
 
         // TDesktop background
         color = new CellAttributes();
         color.setForeColor(Color.CYAN);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tdesktop.background", color);
+        colors.put(TDESKTOP_BACKGROUND, color);
 
         // TButton text
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.GREEN);
         color.setBold(false);
-        colors.put("tbutton.inactive", color);
+        colors.put(TBUTTON_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.CYAN);
         color.setBackColor(Color.GREEN);
         color.setBold(true);
-        colors.put("tbutton.active", color);
+        colors.put(TBUTTON_ACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(true);
-        colors.put("tbutton.disabled", color);
+        colors.put(TBUTTON_DISABLED, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.GREEN);
         color.setBold(true);
-        colors.put("tbutton.mnemonic", color);
+        colors.put(TBUTTON_MNEMONIC, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.GREEN);
         color.setBold(true);
-        colors.put("tbutton.mnemonic.highlighted", color);
+        colors.put(TBUTTON_MNEMONIC_HIGHLIGHTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tbutton.mnemonic.pulse", color);
+        colors.put(TBUTTON_MNEMONIC_PULSE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tbutton.pulse", color);
+        colors.put(TBUTTON_PULSE, color);
 
         // TLabel text
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("tlabel", color);
+        colors.put(TLABEL, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("tlabel.mnemonic", color);
+        colors.put(TLABEL_MNEMONIC, color);
 
         // TText text
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("ttext", color);
+        colors.put(TTEXT, color);
 
         // TField text
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tfield.inactive", color);
+        colors.put(TFIELD_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tfield.active", color);
+        colors.put(TFIELD_ACTIVE, color);
         color = new CellAttributes();
         // Just a small bit of amber.
         color.setForeColorRGB(0x8A610D);
-        colors.put("tfield.pulse", color);
+        colors.put(TFIELD_PULSE, color);
 
         // TCheckBox
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tcheckbox.inactive", color);
+        colors.put(TCHECKBOX_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tcheckbox.active", color);
+        colors.put(TCHECKBOX_ACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("tcheckbox.mnemonic", color);
+        colors.put(TCHECKBOX_MNEMONIC, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBackColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tcheckbox.mnemonic.highlighted", color);
+        colors.put(TCHECKBOX_MNEMONIC_HIGHLIGHTED, color);
         color = new CellAttributes();
         // Just a small bit of amber.
         color.setForeColorRGB(0x8A610D);
-        colors.put("tcheckbox.pulse", color);
+        colors.put(TCHECKBOX_PULSE, color);
 
         // TComboBox
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tcombobox.inactive", color);
+        colors.put(TCOMBOBOX_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tcombobox.active", color);
+        colors.put(TCOMBOBOX_ACTIVE, color);
 
         // TSpinner
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tspinner.inactive", color);
+        colors.put(TSPINNER_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tspinner.active", color);
+        colors.put(TSPINNER_ACTIVE, color);
 
         // TCalendar
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tcalendar.background", color);
+        colors.put(TCALENDAR_BACKGROUND, color);
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tcalendar.day", color);
+        colors.put(TCALENDAR_DAY, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tcalendar.day.selected", color);
+        colors.put(TCALENDAR_DAY_SELECTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tcalendar.arrow", color);
+        colors.put(TCALENDAR_ARROW, color);
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("tcalendar.title", color);
+        colors.put(TCALENDAR_TITLE, color);
 
         // TPanel border
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("tpanel.border", color);
+        colors.put(TPANEL_BORDER, color);
 
         // TRadioButton
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tradiobutton.inactive", color);
+        colors.put(TRADIOBUTTON_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tradiobutton.active", color);
+        colors.put(TRADIOBUTTON_ACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("tradiobutton.mnemonic", color);
+        colors.put(TRADIOBUTTON_MNEMONIC, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBackColor(Color.BLACK);
         color.setBold(true);
-        colors.put("tradiobutton.mnemonic.highlighted", color);
+        colors.put(TRADIOBUTTON_MNEMONIC_HIGHLIGHTED, color);
         color = new CellAttributes();
         // Just a small bit of amber.
         color.setForeColorRGB(0x8A610D);
-        colors.put("tradiobutton.pulse", color);
+        colors.put(TRADIOBUTTON_PULSE, color);
 
         // TRadioGroup
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tradiogroup.inactive", color);
+        colors.put(TRADIOGROUP_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("tradiogroup.active", color);
+        colors.put(TRADIOGROUP_ACTIVE, color);
 
         // TMenu
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tmenu", color);
+        colors.put(TMENU, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.GREEN);
         color.setBold(false);
-        colors.put("tmenu.highlighted", color);
+        colors.put(TMENU_HIGHLIGHTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tmenu.mnemonic", color);
+        colors.put(TMENU_MNEMONIC, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBackColor(Color.GREEN);
         color.setBold(false);
-        colors.put("tmenu.mnemonic.highlighted", color);
+        colors.put(TMENU_MNEMONIC_HIGHLIGHTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(true);
-        colors.put("tmenu.disabled", color);
+        colors.put(TMENU_DISABLED, color);
 
         // TProgressBar
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("tprogressbar.complete", color);
+        colors.put(TPROGRESSBAR_COMPLETE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tprogressbar.incomplete", color);
+        colors.put(TPROGRESSBAR_INCOMPLETE, color);
 
         // THScroller / TVScroller
         color = new CellAttributes();
         color.setForeColor(Color.CYAN);
         color.setBackColor(Color.BLACK);
         color.setBold(false);
-        colors.put("tscroller.bar", color);
+        colors.put(TSCROLLER_BAR, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tscroller.arrows", color);
+        colors.put(TSCROLLER_ARROWS, color);
 
         // TTreeView
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("ttreeview", color);
+        colors.put(TTREEVIEW, color);
         color = new CellAttributes();
         color.setForeColor(Color.GREEN);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("ttreeview.expandbutton", color);
+        colors.put(TTREEVIEW_EXPANDBUTTON, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("ttreeview.selected", color);
+        colors.put(TTREEVIEW_SELECTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("ttreeview.unreadable", color);
+        colors.put(TTREEVIEW_UNREADABLE, color);
         color = new CellAttributes();
-        // color.setForeColor(Color.BLACK);
-        // color.setBackColor(Color.BLUE);
-        // color.setBold(true);
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("ttreeview.inactive", color);
+        colors.put(TTREEVIEW_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("ttreeview.selected.inactive", color);
+        colors.put(TTREEVIEW_SELECTED_INACTIVE, color);
 
         // TList
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tlist", color);
+        colors.put(TLIST, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tlist.selected", color);
+        colors.put(TLIST_SELECTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("tlist.unreadable", color);
+        colors.put(TLIST_UNREADABLE, color);
         color = new CellAttributes();
-        // color.setForeColor(Color.BLACK);
-        // color.setBackColor(Color.BLUE);
-        // color.setBold(true);
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tlist.inactive", color);
+        colors.put(TLIST_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tlist.selected.inactive", color);
+        colors.put(TLIST_SELECTED_INACTIVE, color);
 
         // TStatusBar
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tstatusbar.text", color);
+        colors.put(TSTATUSBAR_TEXT, color);
         color = new CellAttributes();
         color.setForeColor(Color.RED);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("tstatusbar.button", color);
+        colors.put(TSTATUSBAR_BUTTON, color);
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tstatusbar.selected", color);
+        colors.put(TSTATUSBAR_SELECTED, color);
 
         // TEditor
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("teditor", color);
+        colors.put(TEDITOR, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("teditor.selected", color);
+        colors.put(TEDITOR_SELECTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("teditor.margin", color);
+        colors.put(TEDITOR_MARGIN, color);
 
         // TTable
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("ttable.inactive", color);
+        colors.put(TTABLE_INACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.CYAN);
         color.setBold(false);
-        colors.put("ttable.active", color);
+        colors.put(TTABLE_ACTIVE, color);
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("ttable.selected", color);
+        colors.put(TTABLE_SELECTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLACK);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("ttable.label", color);
+        colors.put(TTABLE_LABEL, color);
         color = new CellAttributes();
         color.setForeColor(Color.BLUE);
         color.setBackColor(Color.WHITE);
         color.setBold(false);
-        colors.put("ttable.label.selected", color);
+        colors.put(TTABLE_LABEL_SELECTED, color);
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("ttable.border", color);
+        colors.put(TTABLE_BORDER, color);
 
         // TSplitPane
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("tsplitpane", color);
+        colors.put(TSPLITPANE, color);
 
         // THelpWindow border - during window movement
         color = new CellAttributes();
         color.setForeColor(Color.GREEN);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("thelpwindow.windowmove", color);
+        colors.put(THELPWINDOW_WINDOWMOVE, color);
 
         // THelpWindow border
         color = new CellAttributes();
         color.setForeColor(Color.GREEN);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("thelpwindow.border", color);
+        colors.put(THELPWINDOW_BORDER, color);
 
         // THelpWindow background
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("thelpwindow.background", color);
+        colors.put(THELPWINDOW_BACKGROUND, color);
 
         // THelpWindow text
         color = new CellAttributes();
         color.setForeColor(Color.WHITE);
         color.setBackColor(Color.BLUE);
         color.setBold(false);
-        colors.put("thelpwindow.text", color);
+        colors.put(THELPWINDOW_TEXT, color);
 
         // THelpWindow link
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.BLUE);
         color.setBold(true);
-        colors.put("thelpwindow.link", color);
+        colors.put(THELPWINDOW_LINK, color);
 
         // THelpWindow link - active
         color = new CellAttributes();
         color.setForeColor(Color.YELLOW);
         color.setBackColor(Color.CYAN);
         color.setBold(true);
-        colors.put("thelpwindow.link.active", color);
+        colors.put(THELPWINDOW_LINK_ACTIVE, color);
 
     }
 
